--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-server.port=8080
-spring.activemq.in-memory=true
-spring.activemq.pool.enable=false
+spring.activemq.broker-url=tcp://localhost:61616
