--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.activemq.broker-url=tcp://localhost:61616
+activemq.broker-url=tcp://localhost:61616
+
+activemp.queue-destination=simple-jms-queue
