config two jms listeners

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 activemq.broker-url=tcp://localhost:61616
 
-activemp.queue-destination=simple-jms-queue
+activemp.queue-prod=queue.prod
+
+activemp.queue-dev=queue.dev
+
+
